<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, MainMenu!</string>
    <string name="app_name">Battle Ships Antartica</string>
    <string name="start_game">Start Game</string>
    <string name="about">About</string>
    <string name="about_text">Deployer by  Benedetti Giuliana and Boemo Jurgo </string>
    <string name="back_main">Back To Main Menu </string>
        <string name="start_single_player_game">Start a single player game </string>
        <string name="host_bt_game">Host bluetooth game </string>
        <string name="join_bt_game">Join bluetooth game</string>
        <string name="host_net_game">Host net game</string>
        <string name="join_net_game">Join net game</string>	 
    <string name="your_score">Your Score:  </string>
    <string name="opponents_score">Opponent\'s Score: </string>
	<string name="show_my_field">My Field </string>
	<string name="show_enemy_field">Opponent\'s Field </string>
	<string name="game_over">Game Over </string>
	<string name="notify_on_facebook">Publish Your Result On Facebook</string>
	<string name="activate_facebook_notification">Activate Facebook Notification</string>
	<string name="deactivate_facebook_notification">Deactivate Facebook Notification</string>
	<string name="options">Options</string>
	<string name="logged_in">Logged In!</string>
	<string name="logged_out">Logged Out!</string>
	<string name="login_failed">Login Failed!</string>
	<string name="logout_failed">Logout Failed!</string>
	<string name="enemy_field">Enemy\'s Field</string>
	<string name="my_field">My Field</string>
	<string name="select_difficult">Select Difficult Level</string>
	<string name="veryeasy">Very Easy</string>
	<string name="easy">Easy</string>
	<string name="normal">Normal</string>
	<string name="hard">Hard</string>
</resources>
