<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="bottom"
    >


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:layout_margin="20sp"
    
    >

<TextView android:textSize="24pt"  android:layout_marginBottom="12pt" android:layout_height="wrap_content" android:layout_width="fill_parent" android:gravity="center"  android:text="@string/game_over"></TextView>
<Button android:id="@+id/PostResultOnFacebook"   android:layout_width="wrap_content" android:layout_height="wrap_content"   android:text="@string/notify_on_facebook" ></Button>


</LinearLayout>
<Button android:id="@+id/ButtonBackMenu"  android:layout_width="fill_parent" android:layout_height="wrap_content"   android:text="@string/back_main" ></Button>


</LinearLayout>
